# vibecoding

./: LICENSE  README.md
agent/: agent.py  demo.py  tools.py
rust/hello_rust/: lesson.html
rust/hello_rust/src/: main.rs
salary/: index.html
xiangqi/: .gitignore  index.html  server.py  start.bat  测试方案说明书.md  系统设计说明书.md  需求文档.md
xiangqi/css/: style.css
xiangqi/engine/: __init__.py  board.py  describe.py  engine.py  evaluation.py  fast_engine.py  move_gen.py  rules.py  types.py
xiangqi/js/: board.js  game.js  main.js
xiangqi/pkg/: package.json  xiangqi_core.d.ts  xiangqi_core.js  xiangqi_core_bg.wasm  xiangqi_core_bg.wasm.d.ts
xiangqi/xiangqi-core/: Cargo.toml
xiangqi/xiangqi-core/src/: board.rs  engine.rs  evaluation.rs  lib.rs  move_gen.rs  rules.rs  types.rs  wasm_interface.rs
